Started configuring caching and updated documentation
